--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -1,22 +1,22 @@
 \chapter{Introduction}
 
-Ultra Low Power Processors, such as ARM's Cortex-M0+, are becomming an increasingly appealing area of research, particularly because they provide a platform for the Internet of Things. As our culture develops new ways for technology to aid our every-day lives, the devices which support these progressions are required to be less and less introdusive, forcing companies to search for new methods of making systems smaller and require lower power. In some cases devices are required to run for months or even years using a single power source.
+Ultra Low Power Processors, such as ARM's Cortex-M0+, are becoming an increasingly appealing area of research, particularly because they provide a platform for the Internet of Things. As our culture develops new ways for technology to aid our every-day lives, the devices which support these progressions are required to be less and less intrusive, forcing companies to search for new methods of making systems smaller and require lower power. In some cases devices are required to run for months or even years using a single power source.
 
-However, such processors clearly create very tight constraints for potencial developers, as processing power is often limited, leading to the ever-continuing requirement for more efficient and optimised algorithms. As memory usage is also proportional to power consumption, the RAM availaible on such systems is also extremely limiting. As we begin to rely on these systems more and more, these constraints make it a growing challenge to implement systems which are not only useful, but can be relied upon to function when needed.
+However, such processors clearly create very tight constraints for potential developers, as processing power is often limited, leading to the ever-continuing requirement for more efficient and optimised algorithms. As memory usage is also proportional to power consumption, the RAM available on such systems is also extremely limiting. As we begin to rely on these systems more and more, these constraints make it a growing challenge to implement systems which are not only useful, but can be relied upon to function when needed.
 
 \namedsection{Project Overview}{Shepherd}
 
-ARM is currently investigating the concept of a subthreshold Cortex-M0+, which attempts to push the extremes of these constraints further by providing just 8KB of memory for both program code and data, and running at just a few hundred cycles per second. This project aims to research and develop an algorithm which is capable of running on such a device, to act as a proof of concept that such a processor would be worth while.
+ARM is currently investigating the concept of a sub threshold Cortex-M0+, which attempts to push the extremes of these constraints further by providing just 8KB of memory for both program code and data, and running at just a few hundred cycles per second. This project aims to research and develop an algorithm which is capable of running on such a device, to act as a proof of concept that such a processor would be worth while.
 
-This report first describes the research and analysis towards the algorithms used for exercise detection which currently exist, specifically focusing on Machine Learning techniques. This includes a description of the tools and techniques used, and the methods by which the effectivness of trained algorithms were evaluated.
+This report first describes the research and analysis towards the algorithms used for exercise detection which currently exist, specifically focusing on Machine Learning techniques. This includes a description of the tools and techniques used, and the methods by which the effectiveness of trained algorithms were evaluated.
 
 Following on from this, the second chapter discusses the details of the implementation of the chosen algorithm is listed, specifically looking into the improvements that were made to further optimise existing versions of the algorithm. This will also explore the heuristics that were added to raise the accuracy of the detection system for this project's specific use case, and the supporting software that was developed by the team to aid the process of development. The chapter concludes by assessing the tradeoffs that were required to have the program code run on a low scale device.
 
-As the proposed subthreshold Cortex-M0+ is still in development, it was not readily available for the group to use. As such, the team have used a Cortex M0 to emulate the processor. The report next details the challenges involved in this, particularly discussing the research into components and a comparison between using the FPGA and mBed as platform on which to develop, allowing the clock speeds to be adjusted based on the efficiency and requirements of the algorithm.
+As the proposed sub threshold Cortex-M0+ is still in development, it was not readily available for the group to use. As such, the team have used a Cortex M0 to emulate the processor. The report next details the challenges involved in this, particularly discussing the research into components and a comparison between using the FPGA and mBed as platform on which to develop, allowing the clock speeds to be adjusted based on the efficiency and requirements of the algorithm.
 
 Other parts of the project include a user study to collect movement data of the exercises; this data is needed in order to develop the algorithm and a user study is an ideal way to collect a range of data from a selection of different people because each individual is likely to perform the exercises with slight variations.
 
-This report concludes by evaluating the final developed algorithm in terms of its accuracy in detecting exercises and its power and resource requirements. This is then used as a basis for determining the suitableness of using constrained subthreshold devices to compute complex problems.
+This report concludes by evaluating the final developed algorithm in terms of its accuracy in detecting exercises and its power and resource requirements. This is then used as a basis for determining the suitableness of using constrained sub threshold devices to compute complex problems.
 
 \namedsection{Project Specification}{Finch}
 
